# kira-sdl

./: .gitignore  CMakeLists.txt  README.md
include/: Colour.h  EventDispatcher.h  Game.h  GameContext.h  GameRectangle.h  rpg.h
include/interfaces/: IDrawable.h
src/: Colour.cpp  EventDispatcher.cpp  Game.cpp  GameRectangle.cpp  main.cpp  rpg.cpp
